--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 transformers
 torchvision 
-torchaudio --index-url https://download.pytorch.org/whl/cu118
+torchaudio 
 streamlit
 python-docx
 environs
