--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
-transformers
-torchvision 
-torchaudio 
-streamlit
-python-docx
-environs
+# Asosiy kutubxonalar
+streamlit>=1.30.0
+transformers>=4.36.0
+urllib3>=2.0.0
+requests>=2.31.0
+python-docx>=1.0.0
+
+# PyTorch (CUDA bilan)
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch>=2.1.0+cu118
+torchvision>=0.16.0+cu118
+torchaudio>=2.1.0+cu118
+
+# Audio qayta ishlash uchun
+librosa>=0.10.0
+soundfile>=0.12.1
+
+# Tilda uchun
+numpy>=1.26.0
+pandas>=2.1.0
